--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "doctrine/collections": "^1.6",
-        "garak/card": "dev-master"
+        "garak/card": "^0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
