--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -57,4 +57,13 @@ jobs:
                   php-version: ${{ matrix.php }}
             - run: composer update --no-interaction --no-progress --ansi ${{ matrix.composer_option }}
             - run: vendor/bin/phpunit
+            - name: Test & publish code coverage
+              if: ${{ matrix.php == '8.2 }}
+              uses: paambaati/codeclimate-action@v3.2.0
+              env:
+                  CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+              with:
+                  coverageCommand: vendor/bin/phpunit --coverage-clover coverage.xml
+                  coverageLocations: ${{github.workspace}}/coverage.xml:clover
+
 
