--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -58,7 +58,7 @@ jobs:
             - run: composer update --no-interaction --no-progress --ansi ${{ matrix.composer_option }}
             - run: vendor/bin/phpunit
             - name: Test & publish code coverage
-              if: ${{ matrix.php == '8.2 }}
+              if: ${{ matrix.php == '8.2' }}
               uses: paambaati/codeclimate-action@v3.2.0
               env:
                   CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
