--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,9 @@
 /.git*            export-ignore
 /.php-cs-fixer.*  export-ignore
+/compose.yaml     export-ignore
 /CONTRIBUTING.md  export-ignore
 /Makefile         export-ignore
-/docker*          export-ignore
+/docker/          export-ignore
 /phpstan*.neon    export-ignore
 /phpunit.xml.dist export-ignore
 /README.md        export-ignore
