--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,27 +6,29 @@ on:
 
 jobs:
     phpstan:
-        runs-on: ubuntu-22.04
+        runs-on: ubuntu-24.04
         name: PHPStan
         steps:
             - name: Checkout
               uses: actions/checkout@v4
             - name: PHPStan
-              uses: docker://oskarstark/phpstan-ga
+              uses: docker://oskarstark/phpstan-ga:1.8.0
               env:
                   REQUIRE_DEV: true
               with:
                   args: analyse
     cs-fixer:
-        runs-on: ubuntu-22.04
+        runs-on: ubuntu-24.04
         name: PHP-CS-Fixer
         steps:
             - name: Checkout
               uses: actions/checkout@v4
             - name: Fix CS
               uses: docker://oskarstark/php-cs-fixer-ga
+              with:
+                args: --diff --dry-run
     tests:
-        runs-on: ubuntu-22.04
+        runs-on: ubuntu-24.04
         strategy:
             max-parallel: 1
             matrix:
@@ -34,21 +36,22 @@ jobs:
                     - '8.1'
                     - '8.2'
                     - '8.3'
+                    - '8.4'
                 include:
                     - description: 'lowest'
                       php: '8.1'
                       composer_option: '--prefer-lowest'
-                    - description: '8.2'
-                      php: '8.2'
-                    - description: 'latest'
+                    - description: '8.3'
                       php: '8.3'
+                    - description: 'latest'
+                      php: '8.4'
         name: PHP ${{ matrix.php }} tests
         steps:
             - name: Checkout
               uses: actions/checkout@v4
             - name: Cache
               uses: actions/cache@v4
-              with: 
+              with:
                   path: ~/.composer/cache/files
                   key: ${{ matrix.php }}-${{ matrix.composer_option }} 
             - name: Setup PHP
