--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "garak/card": "^0.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.6"
+        "phpunit/phpunit": "^10.5 || ^11.5 || ^12.0"
     },
     "extra": {
         "branch-alias": {
